source/logs/toontown-03-Jul-2019_14_03_23.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  ttn-dev
Traceback (most recent call last):
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\toontown\toonbase\ToontownStart.py", line 88, in <module>
    cr = ToontownClientRepository.ToontownClientRepository(serverVersion, launcher)
  File "toontown\distributed\ToontownClientRepository.py", line 70, in __init__
    OTPClientRepository.OTPClientRepository.__init__(self, serverVersion, launcher, playGame=PlayGame.PlayGame)
  File "otp\distributed\OTPClientRepository.py", line 55, in __init__
    ClientRepositoryBase.__init__(self)
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\direct\distributed\ClientRepositoryBase.py", line 48, in __init__
    self.readDCFile(dcFileNames)
  File "toontown\distributed\ToontownClientRepository.py", line 1188, in readDCFile
    self.importModule(dcImports, moduleName, importSymbols)
  File "H:\Toontown\Toontown Sources\Toontown-Next\source\dependencies\panda\direct\distributed\ConnectionRepository.py", line 405, in importModule
    module = __import__(moduleName, globals(), locals(), importSymbols)
  File "toontown\toon\DistributedNPCPetclerk.py", line 142
    elif mode == NPCToons.SELL_MOVIE_PETRETURNED:
    ^
IndentationError: expected an indented block
